# market-analysis

./: README.md  init-app.sh  run-app.sh
backend/: app.py  main.py  pyproject.toml
backend/agents/: emerging_competitors_agent.py  incumbent_research_agent.py  market_sizing_agent.py  senior_agent.py
frontend/: .gitignore  README.md  metadata.json  package-lock.json
frontend/src/: App.tsx  api.ts
